; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsobject.c_O_defineProperty.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsobject.c_O_defineProperty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"not an object\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @O_defineProperty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @O_defineProperty(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @js_isobject(i32* %3, i32 1)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @js_typeerror(i32* %7, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  br label %9

9:                                                ; preds = %6, %1
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @js_isobject(i32* %10, i32 3)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %9
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @js_typeerror(i32* %14, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %13, %9
  %17 = load i32*, i32** %2, align 8
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @js_toobject(i32* %18, i32 1)
  %20 = load i32*, i32** %2, align 8
  %21 = call i32 @js_tostring(i32* %20, i32 2)
  %22 = load i32*, i32** %2, align 8
  %23 = call i32 @js_toobject(i32* %22, i32 3)
  %24 = call i32 @ToPropertyDescriptor(i32* %17, i32 %19, i32 %21, i32 %23)
  %25 = load i32*, i32** %2, align 8
  %26 = call i32 @js_copy(i32* %25, i32 1)
  ret void
}

declare dso_local i32 @js_isobject(i32*, i32) #1

declare dso_local i32 @js_typeerror(i32*, i8*) #1

declare dso_local i32 @ToPropertyDescriptor(i32*, i32, i32, i32) #1

declare dso_local i32 @js_toobject(i32*, i32) #1

declare dso_local i32 @js_tostring(i32*, i32) #1

declare dso_local i32 @js_copy(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
